# eyes

./: .env.example  .gitignore  .tmp_list_ids.js  anchor-init-output.json  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
anchor/: Anchor.toml  Cargo.toml
anchor/migrations/: deploy.ts
anchor/programs/mint_gate/: Cargo.toml
anchor/programs/mint_gate/src/: lib.rs
anchor/scripts/: initCollection.ts
src/: instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/activity/: page.tsx
src/app/api/collections/: route.ts
src/app/api/explore/: route.ts
src/app/api/generate/: route.ts
src/app/api/ping/: route.ts
src/app/create/: page.tsx
src/app/explore/: page.tsx
src/app/explorer/: page.tsx
src/components/: ErrorNotice.tsx  Footer.tsx  Header.tsx  ImageWithSkeleton.tsx  IpfsImage.tsx  MobileNav.tsx  PricingCalculator.tsx  Providers.tsx  Skeleton.tsx  ThemeToggle.tsx  Toast.tsx  WalletButton.tsx
src/components/ui/: Button.tsx
src/lib/: baseUrl.ts  cn.ts  ipfs.ts  key.ts  mint.ts  mock.ts  pricing-server.ts  scroll-reveal.ts  theme.tsx
src/server/: baseUrl.ts  db.ts  ipfs-gateway.ts  ipfs-url.ts  ipfs.ts  monitoring.ts  pinata.ts  rate-limit.ts  redis.ts  stability.ts  url.ts
src/server/ai/: stability.ts
src/server/db/: models.ts  mongo.ts
src/server/solana/: build-tx.ts  confirm.ts  mintgate.ts  rpc.ts
src/server/worker/: index.ts
src/utils/: alias-test.ts  baseUrl.ts
styles/: globals.css
tools/: print-tree.ts  tree.sh
(+23 files in other folders)
